--- a/index.html
+++ b/index.html
@@ -221,11 +221,10 @@
 			
 			function getBase() {
 				if (window.location.href.indexOf("https://takepoint.io") == 0) {
-					return "https://takepoint.io"
+					return "https://takepoint.io";
 				} 
-				else if (window.location.href.includes("devtunnels.ms")) {
-					let candidate = window.location.href.replace(debugPort.toString(), apiPort.toString());
-					return candidate.substring(0, candidate.length - 1);
+				else if (window.location.href.indexOf("https://takepoint.nitrogem35.pw") == 0) {
+					return "https://api.nitrogem35.pw";
 				}
 				else return "http://127.0.0.1:" + apiPort.toString();
 			}
