url change for local testing

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 				else if (window.location.href.indexOf("https://takepoint.nitrogem35.pw") == 0) {
 					return "https://api.nitrogem35.pw";
 				}
-				else return "https://api.nitrogem35.pw";
+				else return "http://localhost:8080";
 			}
 
 			(function(window, document) {
