--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 			<div class="menu-container">
 				<div class="menu-segment" id="a-left">
-
+					<iframe width="100%" height="100%" src="https://www.youtube.com/embed/xOD8Fz1TFK0?si=0b02Nf3HBqW6PXe3&amp;start=24" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
 				</div>
 				<div class="menu-middle">
 					<div class="menu-segment enter-game-container">
@@ -81,6 +81,14 @@
 				</div>
 				<div class="menu-segment info-scroller">
 					<h2 class="menu-title-big align-center">Changelog</h2>
+
+					<h2 class="menu-title-medium align-left">June 22, 2024</h2>
+					<p class="changelog-text">
+						- Implemented daily highscore tracking <br>
+						- Tweaked acceleration slightly <br>
+						- Added a <a href="https://stats.nitrogem35.pw/"">stats</a> page with leaderboards and player statistics <br>
+						- The left container is now a Featured Youtuber section
+					</p>
 
 					<h2 class="menu-title-medium align-left">June 18, 2024</h2>
 					<p class="changelog-text">
