--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 				<div id="infoFooter">
 					<a id="moreGamesLink" target="_blank" href="https://ioground.com">More Games</a> | 
 					<a target="_blank" href="https://stats.nitrogem35.pw">Stats</a> | 
-					<a target="_blank" href="https://stats.nitrogem35.pw/changelog">v1.13.6</a>
+					<a target="_blank" href="https://stats.nitrogem35.pw/changelog">Changelog</a>
 				</div>
 				<div id="socialFooter">
 					<a id="discordButton" target="_blank" href="https://discord.gg/vbZqzuv">Discord</a>
