--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
 				<div class="menu-segment info-scroller">
 					<h2 class="menu-title-big align-center">Changelog</h2>
 
+					<h2 class="menu-title-medium align-left">June 26, 2024</h2>
+					<p class="changelog-text">
+						- Gas grenades now only deal damage to enemy teams <br>
+						- Buffed the radius and damage of the gas grenade by 50% each
+					</p>
+
 					<h2 class="menu-title-medium align-left">June 22, 2024</h2>
 					<p class="changelog-text">
 						- Implemented daily highscore tracking <br>
