added meta tags

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 		<meta http-equiv="Expires" content="0">
 
 		<title>Takepoint.io</title>
+		<meta content="Takepoint.io" property="og:title"/>
+		<meta content="Takepoint.io is a tactical, objective-based shooter. Capture and defend points from other teams, unlock weapons, upgrades and perks. Player stats can be viewed at stats.takepoint.io." property="og:description"/>
+		<meta content="#383dd6" data-react-helmet="true" name="theme-color"/>
+		<meta name="twitter:card" content="https://stats.nitrogem35.pw/img/thumbnail.png">
 
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<!--link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16">
