--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 		<title>Takepoint.io</title>
 		<meta content="Takepoint.io" property="og:title"/>
 		<meta content="Takepoint.io is a tactical, objective-based shooter. Capture and defend points from other teams, unlock weapons, upgrades and perks. Player stats can be viewed at stats.takepoint.io." property="og:description"/>
-		<meta content="#383dd6" data-react-helmet="true" name="theme-color"/>
-		<meta name="twitter:card" content="https://stats.nitrogem35.pw/img/thumbnail.png">
+		<meta content="https://stats.nitrogem35.pw/img/thumbnail.png" property="og:image"/>
+		<meta content="#ed5555" name="theme-color"/>
+		<meta name="twitter:card" content="summary_large_image">
 
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<!--link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16">
