show which slash commands are available

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 		<canvas id="hud"></canvas>
 
 		<div id="chatboxContainer">
+			<div id="slashCommandContainer"></div>
 			<input id="chatbox" autocomplete="off" placeholder="Type a message" maxlength="32" length="32" style="display:none;">
 		</div>
 
