--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
 
 		<link href="https://fonts.googleapis.com/css?family=Orbitron:900" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-WW8M32ERSM"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'G-WW8M32ERSM');
+		</script>
 	</head>
 	<body oncontextmenu="return false;">
 		<span id="loading" class="loading-connecting">Loading...</span>
