--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 		</div>
 
 		<div class="game-menu-container" id="enterGameContainer">
-			<img id="logo" src="/img/logo.png">
+			<!--img id="logo" src="/img/logo.png"-->
+			<img id="logo" src="/img/logo.svg" alt="Game logo"/>
 
 			<h2 id="gameFact"></h2>
 
