--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
 				<div class="menu-segment info-scroller">
 					<h2 class="menu-title-big align-center">Changelog</h2>
 
+					<h2 class="menu-title-medium align-left">July 14, 2024</h2>
+					<p class="changelog-text">
+						- Added weapon attachments. See the full list on the stats page. <br>
+						- Weapon attachments unlock at level 20, once you've selected a tier 2 weapon.
+					</p>
+
 					<h2 class="menu-title-medium align-left">June 26, 2024</h2>
 					<p class="changelog-text">
 						- Gas grenades now only deal damage to enemy teams <br>
