--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<meta content="https://stats.nitrogem35.pw/img/thumbnail.png" property="og:image"/>
 		<meta content="#ed5555" name="theme-color"/>
 		<meta name="twitter:card" content="summary_large_image">
+		<meta name="google-adsense-account" content="ca-pub-8204461967892142">
 
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<!--link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16">
