--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 		<meta http-equiv="Pragma" content="no-cache">
 		<meta http-equiv="Expires" content="0">
 
-		<title>Takepoint.io</title>
-		<meta content="Takepoint.io" property="og:title"/>
-		<meta content="Takepoint.io is a tactical, objective-based shooter. Capture and defend points from other teams, unlock weapons, upgrades and perks. Player stats can be viewed at stats.takepoint.io." property="og:description"/>
-		<meta content="https://stats.nitrogem35.pw/img/thumbnail.png" property="og:image"/>
+		<title>Takepoints.io</title>
+		<meta content="Takepoints.io" property="og:title"/>
+		<meta content="Takepoints.io is a tactical, objective-based shooter. Capture and defend points from other teams, unlock weapons, upgrades and perks. Player stats can be viewed at stats.takepoints.io." property="og:description"/>
+		<meta content="https://stats.takepoints.io/img/thumbnail.png" property="og:image"/>
 		<meta content="#ed5555" name="theme-color"/>
 		<meta name="twitter:card" content="summary_large_image">
-		<meta name="google-adsense-account" content="ca-pub-8204461967892142">
 
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<!--link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16">
@@ -97,7 +96,7 @@
 					<p class="changelog-text">
 						- Implemented daily highscore tracking <br>
 						- Tweaked acceleration slightly <br>
-						- Added a <a href="https://stats.nitrogem35.pw/"">stats</a> page with leaderboards and player statistics <br>
+						- Added a <a href="https://stats.takepoints.io/"">stats</a> page with leaderboards and player statistics <br>
 						- The left container is now a Featured Youtuber section
 					</p>
 
@@ -119,8 +118,8 @@
 			<div id="footers">
 				<div id="infoFooter">
 					<a id="moreGamesLink" target="_blank" href="https://ioground.com">More Games</a> | 
-					<a target="_blank" href="https://stats.nitrogem35.pw">Stats</a> | 
-					<a target="_blank" href="https://stats.nitrogem35.pw/changelog">Changelog</a>
+					<a target="_blank" href="https://stats.takepoints.io">Stats</a> | 
+					<a target="_blank" href="https://stats.takepoints.io/changelog">Changelog</a>
 				</div>
 				<div id="socialFooter">
 					<a id="discordButton" target="_blank" href="https://discord.gg/vbZqzuv">Discord</a>
@@ -156,7 +155,7 @@
 						<div class="errorMessage" id="loginError" style="display:none;"></div>
 					</div>
 					<p>Don't have an account? <a class="link" href="#" onclick="openRegister()">Register</a></p>
-					<p>Forgot your password? <a class="link" href="https://account.takepoint.io/password/reset">Click here</a></p>
+					<p>Forgot your password? <a class="link" href="https://stats.takepoints.io/password/reset">Click here</a></p>
 					<button class="modal-btn" id="loginSubmitBtn" onclick="login()">Login</button>
 				</div>
 			</div>
@@ -195,8 +194,8 @@
 			const globalAPIBase = getBase();
 			
 			function getBase() {
-				if (window.location.href.indexOf("https://takepoint.io") == 0) {
-					return "https://takepoint.io";
+				if (window.location.href.indexOf("https://takepoints.io") == 0) {
+					return "https://api.takepoints.io";
 				} 
 				else if (window.location.href.indexOf("https://takepoint.nitrogem35.pw") == 0) {
 					return "https://api.nitrogem35.pw";
