--- a/index.html
+++ b/index.html
@@ -373,5 +373,17 @@
 				console.error(e);
 			}
 		</script>
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2167384480353654" crossorigin="anonymous"></script>
+		<!-- ad1 -->
+		<ins class="adsbygoogle"
+			style="display:block"
+			data-ad-client="ca-pub-2167384480353654"
+			data-ad-slot="8203420191"
+			data-ad-format="auto"
+			data-full-width-responsive="true">
+		</ins>
+		<script>
+			(adsbygoogle = window.adsbygoogle || []).push({});
+		</script>
 	</body>
 </html>
