update game logo

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 		<div class="game-menu-container" id="enterGameContainer">
 			<!--img id="logo" src="/img/logo.png"-->
-			<img id="logo" src="/img/logo.svg" alt="Game logo"/>
+			<img id="logo" src="/img/logo-new.svg" alt="Game logo"/>
 
 			<h2 id="gameFact"></h2>
 
