--- a/index.html
+++ b/index.html
@@ -111,13 +111,17 @@
 			</div>
 
 			<div class="menu-segment wide-ad-unit" id="a-bottom">
+				<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2167384480353654" crossorigin="anonymous"></script>
 				<!-- ad1 -->
-				<ins class="adsbygoogle"
-					style="display:block"
+				<ins 
+					class="adsbygoogle"
+					style="display:inline-block;width:970px;height:250px"
 					data-ad-client="ca-pub-2167384480353654"
 					data-ad-slot="8203420191"
-					data-full-width-responsive="true">
-				</ins>
+				></ins>
+				<script>
+					(adsbygoogle = window.adsbygoogle || []).push({});
+				</script>
 			</div>
 
 			<div id="footers">
@@ -377,10 +381,6 @@
 			catch(e){
 				console.error(e);
 			}
-		</script>
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2167384480353654" crossorigin="anonymous"></script>
-		<script>
-			(adsbygoogle = window.adsbygoogle || []).push({});
 		</script>
 	</body>
 </html>
