link to iogames.space

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 			<div id="footers">
 				<div id="infoFooter">
-					<a id="moreGamesLink" target="_blank" href="https://ioground.com">More Games</a> | 
+					<a id="moreGamesLink" target="_blank" href="https://iogames.space">More Games</a> | 
 					<a target="_blank" href="https://stats.takepoints.io">Stats</a> | 
 					<a target="_blank" href="https://stats.takepoints.io/changelog">Changelog</a>
 				</div>
