--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
 				<div class="menu-segment info-scroller">
 					<h2 class="menu-title-big align-center">Changelog</h2>
 
+					<h2 class="menu-title-medium align-left">August 13, 2024</h2>
+					<p class="changelog-text">
+						- Added some new guest names <br>
+						- Throwable items now stop properly when they reach the edge of the map <br>
+						- Deployed a hotfix for servers sometimes not letting players join <br>
+						- Takepoints.io is now out of closed beta! Testers have been given a special badge on their <a href="https://stats.takepoints.io/"">Player Summary</a>.
+					</p>
+
 					<h2 class="menu-title-medium align-left">July 14, 2024</h2>
 					<p class="changelog-text">
 						- Added weapon attachments. See the full list on the stats page. <br>
