--- a/index.html
+++ b/index.html
@@ -144,6 +144,25 @@
 			</div>
 		</div>
 
+		<div class="respawn-ad-container" id="respawn-ad-container" style="display: none;">
+			<div id="a-bottom-respawn">
+				<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2167384480353654" crossorigin="anonymous"></script>
+				<!-- respawn-ad -->
+				<ins 
+					class="adsbygoogle"
+					style="display:block"
+					data-ad-client="ca-pub-2167384480353654"
+					data-ad-slot="6316121861"
+					data-ad-format="rectangle, horizontal"
+					data-adtest="on"
+					data-full-width-responsive="true"
+				></ins>
+				<script>
+					(adsbygoogle = window.adsbygoogle || []).push({});
+				</script>
+			</div>
+		</div>
+
 		<div id="highscores">
 			<h1 id="hiscoresHeading">Top Scores Today</h1>
 			<ul id="highScoresList"></ul>
