fix width/height for responsive ad

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 					style="display:block"
 					data-ad-client="ca-pub-2167384480353654"
 					data-ad-slot="6316121861"
-					data-ad-format="rectangle, horizontal"
+					data-ad-format="auto"
 					data-full-width-responsive="true"
 				></ins>
 				<script>
