fix page description

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 		<title>Takepoints.io</title>
 		<meta content="Takepoints.io" property="og:title"/>
-		<meta content="Takepoints.io is a tactical, objective-based shooter. Capture and defend points from other teams, unlock weapons, upgrades and perks. Player stats can be viewed at stats.takepoints.io." property="og:description"/>
 		<meta content="https://stats.takepoints.io/img/thumbnail.png" property="og:image"/>
 		<meta content="#ed5555" name="theme-color"/>
+		<meta name="description" content="Takepoints.io is a tactical, objective-based shooter. Capture and defend points from other teams, unlock weapons, upgrades and perks. Player stats can be viewed at stats.takepoints.io."/>
 		<meta name="twitter:card" content="summary_large_image">
 
 		<link rel="stylesheet" type="text/css" href="style.css" />
