--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 			<div id="footers">
 				<div id="infoFooter">
-					<a id="moreGamesLink" target="_blank" href="https://iogames.space">More Games</a> | 
+					<a id="moreGamesLink" target="_blank" href="https://one.sigmally.com">Agario</a> | 
 					<a target="_blank" href="https://stats.takepoints.io">Stats</a> | 
 					<a target="_blank" href="https://stats.takepoints.io/changelog">Changelog</a>
 				</div>
